# GDrivePlayer

./: LICENSE  README.md  pyproject.toml
GDrivePlayer/: __init__.py  exceptions.py  gdriveplayer.py  scrap.py
