[tool.poetry]
name = "GDrivePlayer"
version = "0.1.0"
description = "Python module for fetching data from databasegdriveplayer.co"
authors = ["Plastic Cat <not_plastic_cat@protonmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/notPlasticCat/GDrivePlayer"
packages = [
    { include = "GDrivePlayer" }
]
keywords = ["api", "scraping", "anime", "movie", "beautifulsoup4"]


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
